unpackaged/main/default/objects/Job__c/fields/Accepted_by_QuickParts__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_QuickParts__c</fullName>
    <formula>Supplier__r.PartnerID__c = 'P54401'</formula>
    <label>Accepted by QuickParts?</label>
    <type>Checkbox</type>
</CustomField>