unpackaged/main/default/objects/Job__c/fields/Accepted_by_SPOC_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_SPOC_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted by SPOC Supplier?</label>
    <type>Checkbox</type>
</CustomField>