unpackaged/main/default/objects/Job__c/fields/AcceptedDateTime__c.field-meta.xml
<CustomField>
    <fullName>AcceptedDateTime__c</fullName>
    <label>Accepted Date / Time</label>
    <type>DateTime</type>
</CustomField>