unpackaged/main/default/objects/Job__c/fields/AcceptedPartnerID__c.field-meta.xml
<CustomField>
    <fullName>AcceptedPartnerID__c</fullName>
    <label>Accepted Partner ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>