unpackaged/main/default/objects/Job__c/fields/AcceptedPrice__c.field-meta.xml
<CustomField>
    <fullName>AcceptedPrice__c</fullName>
    <label>Accepted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>