unpackaged/main/default/objects/Job__c/fields/Bad_Outcome_Rejected_Worst_Part__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcome_Rejected_Worst_Part__c</fullName>
    <label>Bad Outcome Rejected Worst Part</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>