unpackaged/main/default/objects/Job__c/fields/Days_Syntax__c.field-meta.xml
<CustomField>
    <fullName>Days_Syntax__c</fullName>
    <formula>IF (ABS(Job_Overdue_Flag__c) == 1, 'Day', 'Days')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day(s) Syntax</label>
    <type>Text</type>
</CustomField>