unpackaged/main/default/objects/Job__c/fields/DFM_Complete__c.field-meta.xml
<CustomField>
    <fullName>DFM_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DFM Complete</label>
    <type>Checkbox</type>
</CustomField>