unpackaged/main/default/objects/Job__c/fields/DFM_Completion_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>DFM_Completion_Timestamp__c</fullName>
    <label>DFM Completion Timestamp</label>
    <type>DateTime</type>
</CustomField>