unpackaged/main/default/objects/Job__c/fields/ERP_Job_Board_URL__c.field-meta.xml
<CustomField>
    <fullName>ERP_Job_Board_URL__c</fullName>
    <formula>IF(NOT(ISBLANK(XometryJobID__c )),HYPERLINK("https://erp.xometry.com/outsourced-jobs?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=1&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+XometryJobID__c+"&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=&amp;columns%5B%5D=%5EAccepted%7CCompleted%7CExpired%7CIn+Progress%7COffered%7CRejected%7CRescinded%7CVendor+Completed%24&amp;n_columns=13","Go to this Job on the ERP Job Board", "_blank"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Job Board URL</label>
    <type>Text</type>
</CustomField>