unpackaged/main/default/objects/Job__c/fields/ERP_Job_Details_URL__c.field-meta.xml
<CustomField>
    <fullName>ERP_Job_Details_URL__c</fullName>
    <formula>IF( NOT(ISBLANK(XometryJobID__c )),HYPERLINK("https://erp.xometry.com/jobs/"+XometryJobID__c,"Go to this Job in the ERP", "_blank"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Job Details URL</label>
    <type>Text</type>
</CustomField>