unpackaged/main/default/objects/Job__c/fields/EstimatedCompletionDateReason__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionDateReason__c</fullName>
    <label>Estimated Completion Date Reason</label>
    <type>TextArea</type>
</CustomField>