unpackaged/main/default/objects/Job__c/fields/GNO_CustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>GNO_CustomerPrice__c</fullName>
    <inlineHelpText>Customer Price on this Job</inlineHelpText>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>