unpackaged/main/default/objects/Job__c/fields/GNO_ManualSupplierFeedback__c.field-meta.xml
<CustomField>
    <fullName>GNO_ManualSupplierFeedback__c</fullName>
    <description>Text area to input Supplier Feedback</description>
    <inlineHelpText>Record Supplier Feedback Manually.</inlineHelpText>
    <label>Manual Supplier Feedback on This Job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>