unpackaged/main/default/objects/Job__c/fields/GNO_PSMargin__c.field-meta.xml
<CustomField>
    <fullName>GNO_PSMargin__c</fullName>
    <formula>(GNO_SourcedPrice__c-GNO_CustomerPrice__c  ) /  GNO_CustomerPrice__c</formula>
    <inlineHelpText>PS Margin</inlineHelpText>
    <label>Pre Sourcing Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>