unpackaged/main/default/objects/Job__c/fields/GNO_SourcedPrice__c.field-meta.xml
<CustomField>
    <fullName>GNO_SourcedPrice__c</fullName>
    <inlineHelpText>Sourced Price on this Job. Pre-Sourcing</inlineHelpText>
    <label>Sourced Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>