unpackaged/main/default/objects/Job__c/fields/HasDelrinMat__c.field-meta.xml
<CustomField>
    <fullName>HasDelrinMat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a job has Delrin Material?</description>
    <inlineHelpText>Whether a job has Delrin Material?</inlineHelpText>
    <label>Has Delrin Mat</label>
    <type>Checkbox</type>
</CustomField>