unpackaged/main/default/objects/Job__c/fields/HasTitaniumMat__c.field-meta.xml
<CustomField>
    <fullName>HasTitaniumMat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the job has Titanium Material?</description>
    <inlineHelpText>Whether the job has Titanium Material?</inlineHelpText>
    <label>Has Titanium Mat</label>
    <type>Checkbox</type>
</CustomField>