unpackaged/main/default/objects/Job__c/fields/InspectionRequirement__c.field-meta.xml
<CustomField>
    <fullName>InspectionRequirement__c</fullName>
    <label>Inspection Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>