unpackaged/main/default/objects/Job__c/fields/IsAlum_Mat__c.field-meta.xml
<CustomField>
    <fullName>IsAlum_Mat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alum Mat</label>
    <type>Checkbox</type>
</CustomField>