unpackaged/main/default/objects/Job__c/fields/ITAR__c.field-meta.xml
<CustomField>
    <fullName>ITAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITAR?</label>
    <type>Checkbox</type>
</CustomField>