unpackaged/main/default/objects/Job__c/fields/Job_is_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Job_is_Past_Due__c</fullName>
    <formula>IF( OR(ISPICKVAL(Stage__c, 'Completed'), ISPICKVAL(Stage__c, 'Vendor Completed')), 'Fully Shipped',
IF( DueDate__c &lt; TODAY(), TEXT(Job_Overdue_Flag__c) &amp; ' ' &amp; Days_Syntax__c &amp; ' Late',
IF( DueDate__c = TODAY(), 'Due Today', 
'Due in ' &amp; TEXT(ABS(Job_Overdue_Flag__c)) &amp; ' ' &amp; Days_Syntax__c)
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job OTS Status</label>
    <type>Text</type>
</CustomField>