unpackaged/main/default/objects/Job__c/fields/Job_Overdue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Job_Overdue_Flag__c</fullName>
    <label>T- Days to Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>