unpackaged/main/default/objects/Job__c/fields/JobContact__c.field-meta.xml
<CustomField>
    <fullName>JobContact__c</fullName>
    <description>Contact Information on Job Record</description>
    <formula>Supplier__r.Name__c + BR() +  Supplier__r.Phone__c + BR() +  Supplier__r.EmailAddress__c</formula>
    <label>Job Contact</label>
    <type>Text</type>
</CustomField>