unpackaged/main/default/objects/Job__c/fields/JobContactEmail__c.field-meta.xml
<CustomField>
    <fullName>JobContactEmail__c</fullName>
    <description>Job Contact Email Address</description>
    <formula>Supplier__r.EmailAddress__c</formula>
    <inlineHelpText>Job Contact Email Address</inlineHelpText>
    <label>JobContactEmail</label>
    <type>Text</type>
</CustomField>