unpackaged/main/default/objects/Job__c/fields/JobMargin__c.field-meta.xml
<CustomField>
    <fullName>JobMargin__c</fullName>
    <label>Job Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>