unpackaged/main/default/objects/Job__c/fields/LastOfferCountdown__c.field-meta.xml
<CustomField>
    <fullName>LastOfferCountdown__c</fullName>
    <formula>IF (ISPICKVAL(Stage__c,'Offered'), (LastOfferDatetime__c -  NOW())*24, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Countdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>