unpackaged/main/default/objects/Job__c/fields/LastOfferDatetime__c.field-meta.xml
<CustomField>
    <fullName>LastOfferDatetime__c</fullName>
    <label>Expiration DateTime</label>
    <type>DateTime</type>
</CustomField>