unpackaged/main/default/objects/Job__c/fields/MadeinChina__c.field-meta.xml
<CustomField>
    <fullName>MadeinChina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Made in China?</label>
    <type>Checkbox</type>
</CustomField>