unpackaged/main/default/objects/Job__c/fields/Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Cases</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>