unpackaged/main/default/objects/Job__c/fields/Order_IDs_String__c.field-meta.xml
<CustomField>
    <fullName>Order_IDs_String__c</fullName>
    <label>Order IDs String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>