unpackaged/main/default/objects/Job__c/fields/Ordered_Part_Ids_String__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part_Ids_String__c</fullName>
    <label>Ordered Part Ids String</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>