unpackaged/main/default/objects/Job__c/fields/OriginalPreSourceJob__c.field-meta.xml
<CustomField>
    <fullName>OriginalPreSourceJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Pre-Source Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>