unpackaged/main/default/objects/Job__c/fields/OutsourcePartnerGroup__c.field-meta.xml
<CustomField>
    <fullName>OutsourcePartnerGroup__c</fullName>
    <label>Outsource Partner Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Ultra Premium</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sls Partners</fullName>
            </value>
            <value>
                <fullName>Mexico And Canada</fullName>
            </value>
            <value>
                <fullName>Cmm Premium Partners</fullName>
            </value>
            <value>
                <fullName>Cmm</fullName>
            </value>
            <value>
                <fullName>Sla Partners</fullName>
            </value>
            <value>
                <fullName>Experienced Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>