unpackaged/main/default/objects/Job__c/fields/Pre_Source_Stop_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Pre_Source_Stop_Timestamp__c</fullName>
    <label>Pre-Source Stop Timestamp</label>
    <type>DateTime</type>
</CustomField>