unpackaged/main/default/objects/Job__c/fields/Presource__c.field-meta.xml
<CustomField>
    <fullName>Presource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-source?</label>
    <type>Checkbox</type>
</CustomField>