unpackaged/main/default/objects/Job__c/fields/PresourceNotes__c.field-meta.xml
<CustomField>
    <fullName>PresourceNotes__c</fullName>
    <label>Pre-source Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>