unpackaged/main/default/objects/Job__c/fields/PreSourceStatus__c.field-meta.xml
<CustomField>
    <fullName>PreSourceStatus__c</fullName>
    <label>Pre-Source Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Call Campaign</fullName>
            </value>
            <value>
                <fullName>DFM Review</fullName>
            </value>
            <value>
                <fullName>Price Review</fullName>
            </value>
            <value>
                <fullName>Lead Time Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>