unpackaged/main/default/objects/Job__c/fields/Processes__c.field-meta.xml
<CustomField>
    <fullName>Processes__c</fullName>
    <label>Processes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>