unpackaged/main/default/objects/Job__c/fields/processGroup_isAdditiveOnly__c.field-meta.xml
<CustomField>
    <fullName>processGroup_isAdditiveOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>processGroup_isAdditiveOnly</label>
    <type>Checkbox</type>
</CustomField>