unpackaged/main/default/objects/Job__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <formula>OrderID__r.Xometry_Quote_ID__c</formula>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>