unpackaged/main/default/objects/Job__c/fields/RepeatWork__c.field-meta.xml
<CustomField>
    <fullName>RepeatWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Work?</label>
    <type>Checkbox</type>
</CustomField>