unpackaged/main/default/objects/Job__c/fields/RepeatWorkSuppliers__c.field-meta.xml
<CustomField>
    <fullName>RepeatWorkSuppliers__c</fullName>
    <label>Repeat Work Supplier(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>