unpackaged/main/default/objects/Job__c/fields/RiskFactor__c.field-meta.xml
<CustomField>
    <fullName>RiskFactor__c</fullName>
    <label>Risk Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>