unpackaged/main/default/objects/Job__c/fields/ShippingService__c.field-meta.xml
<CustomField>
    <fullName>ShippingService__c</fullName>
    <label>Shipping Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>