unpackaged/main/default/objects/Job__c/fields/Sourcing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sourcing Complete</label>
    <type>Checkbox</type>
</CustomField>