unpackaged/main/default/objects/Job__c/fields/Sourcing_Completion_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Completion_Timestamp__c</fullName>
    <label>Sourcing Completion Timestamp</label>
    <type>DateTime</type>
</CustomField>