unpackaged/main/default/objects/Job__c/fields/Sourcing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Notes__c</fullName>
    <label>Sourcing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>