unpackaged/main/default/objects/Job__c/fields/SPOC_Owner__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOC Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>