unpackaged/main/default/objects/Job__c/fields/SupplierFeedback__c.field-meta.xml
<CustomField>
    <fullName>SupplierFeedback__c</fullName>
    <label>Supplier Feedback on This Job</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>