unpackaged/main/default/objects/Job__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <description>Supplier Company Name</description>
    <formula>Supplier__r.SupplierCompanyName__c</formula>
    <inlineHelpText>Formula Field.</inlineHelpText>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>