unpackaged/main/default/objects/Job__c/fields/SuppliersVerifiedCountry__c.field-meta.xml
<CustomField>
    <fullName>SuppliersVerifiedCountry__c</fullName>
    <description>Supplier's Verified Country</description>
    <formula>Supplier__r.VerifiedCountry__c</formula>
    <inlineHelpText>Lookup Formula</inlineHelpText>
    <label>Supplier's Verified Country</label>
    <type>Text</type>
</CustomField>