unpackaged/main/default/objects/Job__c/fields/Tech_Review_Case_Creation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tech_Review_Case_Creation_Flag__c</fullName>
    <formula>IF( ISPICKVAL(RiskFactor__c,'High'),true,

IF( ISPICKVAL(RiskFactor__c,'Medium'),true,

IF( OrderID__r.Opportunity__r.Account.OPS_Top_20_Customer__c , true,

false)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Review Case Creation Flag</label>
    <type>Checkbox</type>
</CustomField>