unpackaged/main/default/objects/Job__c/fields/Technical_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_Status__c</fullName>
    <label>Technical Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Technical Review Required</fullName>
                <default>true</default>
                <label>No Technical Review Required</label>
            </value>
            <value>
                <fullName>Pending Technical Review</fullName>
            </value>
            <value>
                <fullName>Technical Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>