unpackaged/main/default/objects/Job__c/fields/Time_in_Pre_Source_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Pre_Source_Business_Hours__c</fullName>
    <formula>IF(ISNULL(Pre_Source_Stop_Timestamp__c),
ROUND(10 * (
(5 * FLOOR((TODAY() - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(TODAY() - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(NOW() - DATETIMEVALUE('1996-01-01 13:00:00'), 1)))
))
-
(5 * FLOOR((DATEVALUE(PreSourceTimestamp__c) - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(DATEVALUE(PreSourceTimestamp__c) - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(
IF(HOUR(TIMEVALUE(PreSourceTimestamp__c)) &gt;= 13,
PreSourceTimestamp__c,
DATETIMEVALUE(
TEXT(DATEVALUE(PreSourceTimestamp__c))
+
" " +
'13:00:00'
))
- DATETIMEVALUE('1996-01-01 13:00:00'), 1
)))
))
), 0),

ROUND(10 * (
(5 * FLOOR((DATEVALUE(Pre_Source_Stop_Timestamp__c) - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(DATEVALUE(Pre_Source_Stop_Timestamp__c) - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(Pre_Source_Stop_Timestamp__c - DATETIMEVALUE('1996-01-01 13:00:00'), 1)))
))
-
(5 * FLOOR((DATEVALUE(PreSourceTimestamp__c) - DATE(1996, 01, 01)) / 7) +
MIN(5,
MOD(DATEVALUE(PreSourceTimestamp__c) - DATE(1996, 01, 01), 7) +
MIN(1, 24 / 10 * (MOD(
IF(HOUR(TIMEVALUE(PreSourceTimestamp__c)) &gt;= 13,
PreSourceTimestamp__c,
DATETIMEVALUE(
TEXT(DATEVALUE(PreSourceTimestamp__c))
+
" " +
'13:00:00'
))
- DATETIMEVALUE('1996-01-01 13:00:00'), 1
)))
))
), 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Pre-Source (Business Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>