unpackaged/main/default/objects/Job__c/fields/XometryJobID__c.field-meta.xml
<CustomField>
    <fullName>XometryJobID__c</fullName>
    <externalId>true</externalId>
    <label>Xometry Job ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>