unpackaged/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RiskFactor__c</columns>
    <columns>Stage__c</columns>
    <columns>DueDate__c</columns>
    <columns>XometryOpsOrderID__c</columns>
    <columns>AcceptedPartnerID__c</columns>
    <columns>OutsourcePartnerGroup__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Presource__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>