unpackaged/main/default/objects/Job__c/listViews/Open_SPOC_Jobs.listView-meta.xml
<ListView>
    <fullName>Open_SPOC_Jobs</fullName>
    <columns>NAME</columns>
    <columns>AcceptedDateTime__c</columns>
    <columns>DueDate__c</columns>
    <columns>Supplier__c</columns>
    <columns>SupplierName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Open SPOC Jobs</label>
</ListView>