unpackaged/main/default/objects/Job__c/listViews/SupplierFeedback.listView-meta.xml
<ListView>
    <fullName>SupplierFeedback</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Supplier Feedback</label>
</ListView>